--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,20 @@
-@import-normalize;
+@import-normalize; 
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0px;
+}
+
+ul {
+  margin: 0px;
+  padding-left: 0px;
+  list-style: none;
+}
 
 body {
   margin: 0;
@@ -12,4 +28,18 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.main {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 400px;
+  font-size: 20px;
+  margin: auto;
+  margin-top: 20px;
+  border-radius: 5px;
+  background-color: yellow;
+  color: blueviolet;
 }
